-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.3
-
None
-
13be1d97bbef699f0ddae589bfd5333d53dbe4ee
The QML Menu documentation is not mentioning the default value of the focus property. Menu is derived from Popup and Popup documentation is stating that the default value is set to false.
Unfortunately the default value is changed for Menu (code snippet below) which in my opinion should somehow be mentioned, otherwise the user thinks the default is inherited from the parent.
QQuickMenu::QQuickMenu(QObject *parent)
: QQuickPopup(*(new QQuickMenuPrivate), parent)
{
Q_D(QQuickMenu);
setFocus(true);
connect(d->contentModel, &QQmlObjectModel::countChanged, this, &QQuickMenu::countChanged);
}