Doc: Add specs about focus property

Task-number: QTBUG-75546
Change-Id: I6e672c3a8390c4cf10dc9576cc3bf1eb10a6246b
Reviewed-by: Paul Wicking <paul.wicking@qt.io>